# TrayMat.iced

./: Cargo.toml
src/: env.rs  main.rs
