[package]
name = "tray_mat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json", "blocking","tokio-native-tls"] }
wallpaper = { git = "https://github.com/mtaech/wallpaper.rs.git" }
chrono = "0.4.19"
log = "0.4.14"
fern = "0.6.0"
home = "0.5.3"
iced = {version="0.6.0",features = ["image","tokio"]}
rust-embed = {version = "6.4.2"}
